[package]
name = "github_auth"
version = "0.4.1-alpha.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/github_auth"
documentation = "https://docs.rs/github_auth"
description = "Authenticate with GitHub from the command line."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
dialoguer = "0.1.0"
directories = "0.9.0"
failure = "0.1.1"
mkdirp = "0.1.0"
serde = "1.0.45"
serde_json = "1.0.17"
reqwest = "0.8.5"
serde_derive = "1.0.45"

[dev-dependencies]
# clippy = "0.0"
