[package]
name = "github_auth"
version = "0.7.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/github_auth"
documentation = "https://docs.rs/github_auth"
description = "Authenticate with GitHub from the command line."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
dialoguer = "0.1.0"
directories = "1.0.2"
failure = "0.1.2"
mkdirp = "0.1.0"
serde = "1.0.79"
serde_json = "1.0.32"
reqwest = "0.9.2"
serde_derive = "1.0.79"

[dev-dependencies]
# clippy = "0.0"
