[package]
name = "github_auth"
version = "0.7.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/github_auth"
documentation = "https://docs.rs/github_auth"
description = "Authenticate with GitHub from the command line."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
dialoguer = "0.1.0"
directories = "1.0.2"
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.32"
surf = "2.0.0-alpha.5"
base64 = "0.12.3"

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
# clippy = "0.0"
